--- a/src/page-styles.css
+++ b/src/page-styles.css
@@ -85,8 +85,13 @@ Greys:
 .section-hero {
   height: 100vh;
   position: relative;
+ 
 }
-
+.center-container{
+  display: grid;
+  align-items: center;
+  height: 90vh;
+}
 .padding-top {
   padding-top: 6rem;
 }
@@ -157,9 +162,7 @@ Greys:
   font-weight: 700;
   margin-top: 30px;
 }
-.hero-page {
-  margin-top: 4.8rem !important;
-}
+
 .sticky-padding {
   padding-top: 11.8rem;
 }
